<resources>
    <string name="app_name">ParentPal</string>
    <string name="parentpal">Parentpal</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="title_welcome_page">Welcome</string>
    <string name="title_welcome_page1">ParentPal</string>
    <string name="email">Email</string>
    <string name="email2">user@gmail.com</string>
    <string name="password">Password</string>
    <string name="passwordConfirmation">Password Confirmation</string>
    <string name="inputEmail">masukkan email Anda</string>
    <string name="inputPassword">masukkan password Anda</string>
    <string name="username">Username</string>
    <string name="inputUsername">masukkan username Anda</string>
    <string name="kalkulatorGizi">KalkulatorGizi</string>
    <string name="title_have_account">Have account?</string>
    <string name="title_dont_have_account">Don\'t have account?</string>
    <string name="hint_sign_up">Sign Up</string>
    <string name="hint_log_in">Login</string>
    <string name="hint_sign_in_with_google">Sign In With Google</string>
    <string name="title_home">Home</string>
    <string name="title_news">News</string>
    <string name="title_profile">Profile</string>
    <string name="title_calculator">Calculator</string>
    <string name="retry">Coba Lagi</string>
    <string name="title_logout">Logout</string>
    <string name="title_terms_and_condition">Terms and Condition</string>
    <string name="title_setting_profile">Setting</string>
    <string name="title_bookmark_profile">Bookmark</string>
    <string name="title_history_profile">History</string>
    <string name="title_selamatdatang_home">Selamat Datang</string>
    <string name="edit_image_description">Edit Image</string>
    <string name="zero">0</string>
    <string name="btn_update">Save Changes</string>
    <string name="btn_imt_description">Hitung Indeks Masa Tubuh</string>
    <string name="btn_energy_description">Hitung Kebutuhan Energi</string>
    <string name="btn_bbi_description">Hitung Berat Badan Ideal</string>
    <string name="btn_summary_description">Lihat Rangkuman Kalkulasi</string>
    <string name="height_label">Tinggi Badan (cm) *</string>
    <string name="weight_label">Berat Badan (kg) *</string>
    <string name="gender_label">Jenis Kelamin *</string>
    <string name="age_label">Usia (tahun) *</string>
    <string name="activity_factor_label">Faktor Aktivitas</string>
    <string name="hobby_checked">%s</string>
    <string name="greater_sign">></string>
    <string name="note_hint">Catatan bila ada....</string>
    <string name="height_hint">Cm</string>
    <string name="weight_hint">Kg</string>
    <string name="age_hint">Tahun</string>
    <string name="activity_factor_hint">Faktor Aktivitas</string>
    <string name="note_label">Catatan Tambahan</string>
    <string name="calculate">Hitung</string>
    <string name="clear">Kosongkan</string>
    <string name="laki">Laki-Laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="login">Login</string>
    <string name="favorite">favorite</string>
    <string name="rekomendasi">Rekomendasi:</string>
    <string name="header_normal">BAIK</string>
    <string name="label_normal">Normal Weight (Berat Badan Normal):</string>
    <string name="detail_normal">Selamat! Berat badan Anda normal. Tetap pertahankan gaya hidup sehat dengan pola makan seimbang dan aktifitas fisik teratur.</string>
    <string name="header_underweight">UNDER WEIGHT</string>
    <string name="label_underweight">Underweight (Kekurangan Berat Badan):</string>
    <string name="detail_underweight">Berat badan Anda tergolong kurang. Pertahankan pola makan sehat dan konsultasikan dengan ahli gizi untuk meningkatkan berat badan dengan cara yang sehat.</string>
    <string name="header_overweight">OVERWEIGHT</string>
    <string name="label_overweight">Overweight (Kelebihan Berat Badan):</string>
    <string name="detail_overweight">Anda memiliki kelebihan berat badan. Disarankan untuk berkonsultasi dengan profesional kesehatan untuk mengelola berat badan Anda.</string>
    <string name="header_stunting">STUNTING</string>
    <string name="label_stunting">Stunting (Pertumbuhan Terhambat):</string>
    <string name="detail_stunting">Terjadi stunting pada pertumbuhan Anda. Penting untuk mencari saran dari dokter atau ahli gizi untuk memastikan asupan gizi yang cukup demi mendukung pertumbuhan optimal.</string>

    <!-- Caption -->
    <string name="konsultasi_underweight">1. Konsumsi makanan kaya nutrisi dan tinggi kalori.\n
        2. Pilih camilan sehat di antara waktu makan utama.\n
        3. Konsultasikan dengan ahli gizi untuk merancang rencana makan yang sesuai dengan kebutuhan individu.\n
        4. Tambahkan sumber protein sehat seperti daging tanpa lemak, kacang-kacangan, dan produk susu.\n
        5. Sertakan makanan tinggi lemak sehat seperti alpukat dan kacang-kacangan.\n
        6. Makan lebih sering dalam porsi kecil untuk meningkatkan asupan kalori.\n
        7. Konsumsi makanan tinggi kalori dan nutrisi seperti kacang-kacangan, alpukat, dan biji-bijian.\n
        8. Sertakan protein tinggi dalam setiap makanan, seperti daging tanpa lemak, ikan, dan produk susu.\n
        9. Pertimbangkan untuk berkonsultasi dengan ahli gizi untuk merancang rencana makan yang sesuai dengan kebutuhan energi Anda.\n
        10. Minum cukup air dan hindari minuman berkalori rendah.
    </string>

    <string name="konsultasi_overweight">1. Kurangi asupan kalori dengan mengonsumsi makanan sehat dan seimbang.\n
        2. Tingkatkan aktivitas fisik, seperti olahraga teratur.\n
        3. Konsultasikan dengan ahli gizi atau profesional kesehatan untuk rencana manajemen berat badan yang efektif.\n
        4. Pilih makanan yang rendah lemak dan tinggi serat.\n
        5. Kurangi konsumsi gula dan makanan olahan.\n
        6. Buat jadwal rutin untuk aktivitas fisik dan tambahkan latihan kardiovaskular.\n
        7. Hindari makanan tinggi lemak jenuh dan gula tambahan.\n
        8. Fokus pada porsi makan yang lebih kecil dan lebih sering.\n
        9. Pertimbangkan untuk memasukkan lebih banyak sayuran dan buah-buahan dalam diet harian.\n
        10. Libatkan diri dalam aktivitas fisik yang Anda nikmati, seperti berjalan kaki, bersepeda, atau berenang.
    </string>

    <string name="konsultasi_gizibaik">1. Pertahankan pola makan seimbang dengan mengonsumsi berbagai jenis makanan.\n
        2. Lakukan aktivitas fisik teratur, sesuai dengan tingkat kebugaran individu.\n
        3. Perhatikan pola tidur dan atasi stres untuk menjaga kesehatan secara keseluruhan.\n
        4. Pertahankan pola makan seimbang dengan memasukkan berbagai jenis sayuran, buah-buahan, protein, dan karbohidrat.\n
        5. Tetap aktif dengan melakukan olahraga teratur atau kegiatan fisik yang Anda nikmati.\n
        6. Pertimbangkan untuk melakukan latihan kekuatan (strength training) selain aktivitas kardiovaskular.\n
        7. Pantau berat badan secara teratur dan sesuaikan pola makan atau aktivitas fisik jika diperlukan.
    </string>

    <string name="konsultasi_stunting">1. Pastikan asupan gizi yang cukup, termasuk protein, vitamin, dan mineral.
        2. Konsultasikan dengan dokter atau ahli gizi untuk evaluasi lebih lanjut dan rencana perawatan yang tepat.
        3. Pastikan anak mendapatkan asupan gizi yang seimbang dari makanan bergizi.
        4. Berikan perhatian khusus pada nutrisi selama masa pertumbuhan pesat, seperti dalam masa bayi dan balita.
        5. Lakukan pemeriksaan kesehatan rutin dan pertumbuhan anak secara berkala.
        6. Ajarkan kebiasaan makan sehat sejak dini, termasuk kepentingan sayuran, buah-buahan, dan protein.
        7. Rutin periksa kesehatan anak dan konsultasikan dengan dokter atau ahli gizi jika diperlukan.
        8. Dukung kesehatan mental dan emosional anak untuk memastikan pertumbuhan yang optimal.
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Night Mode Preferences -->
    <string name="pref_dark_title">Dark mode</string>
    <string name="pref_key_dark" translatable="false">key_dark_mode</string>
    <string name="pref_dark_follow_system" translatable="false">follow_system</string>
    <string name="pref_dark_on" translatable="false">on</string>
    <string name="pref_dark_off" translatable="false">off</string>
    <string name="dark_mode_auto">Automatic</string>
    <string name="dark_mode_on">Dark mode</string>
    <string name="dark_mode_off">Light mode</string>

    <!-- Activity Names -->
    <string name="playing_tag">Playing Tag</string>
    <string name="soccer">Soccer</string>
    <string name="basketball">Basketball</string>
    <string name="cycling">Cycling</string>
    <string name="swimming">Swimming</string>
    <string name="jumping_rope">Jumping Rope</string>
    <string name="dancing">Dancing</string>
    <string name="gymnastics">Gymnastics</string>
    <string name="hiking">Hiking</string>
    <string name="skateboarding">Skateboarding</string>
    <string name="rollerblading">Rollerblading</string>
    <string name="yoga_for_kids">Yoga for Kids</string>
    <string name="obstacle_course">Obstacle Course</string>
    <string name="hide_and_seek">Hide and Seek</string>
    <string name="tennis">Tennis</string>
    <string name="bowling">Bowling</string>
    <string name="ice_skating">Ice Skating</string>
    <string name="mini_golf">Mini Golf</string>
    <string name="trampoline_fun">Trampoline Fun</string>
    <string name="tree_climbing">Tree Climbing</string>
    <string name="hopscotch">Hopscotch</string>
    <string name="frisbee">Frisbee</string>
    <string name="karate">Karate</string>
    <string name="judo">Judo</string>
    <string name="biking">Biking</string>
    <string name="rock_climbing">Rock Climbing</string>
    <string name="ziplining">Ziplining</string>
    <string name="playground_activities">Playground Activities</string>
    <string name="scooter_riding">Scooter Riding</string>

</resources>